# crm_bot

./: Makefile  alembic.ini  main.py  pyproject.toml
src/core/: config.py
src/core/bot/: bot.py  command.py
src/core/database/: base_enum.py  core.py
src/core/database/models/: .yml  README.md  __init__.py  cargo.py  user.py
src/core/database/revisions/: env.py
src/core/database/revisions/versions/: 2025_06_01-20fdfa89f56c.py  2025_06_01-7c10342efe35.py
src/dao/: base.py  cargo.py  user.py
src/handlers/: cargo.py  order.py  personal_area.py  register_handlers.py  register_user.py  start.py  stop_fsm.py  unknown.py
src/keyboards/: markup.py
src/keyboards/inline/: cargo.py  order.py  personal_area.py  stop.py
src/states/: order.py  register.py
