[tool.poetry]
name = "financial-bot"
version = "0.1.0"
description = ""
authors = ["Egor Kondratev <zhora_kondratev@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.41"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
pydantic-settings = "^2.9.1"
aiogram = "2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
